--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,10 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
-<resources>
-    <color name="purple_200">#FFBB86FC</color>
-    <color name="purple_500">#FF6200EE</color>
+<resources xmlns:tools="http://schemas.android.com/tools">
+    <color name="purple_200" tools:ignore="UnusedResources">#FFBB86FC</color>
+    <color name="purple_500" tools:ignore="UnusedResources">#FF6200EE</color>
     <color name="purple_700">#FF3700B3</color>
-    <color name="teal_200">#FF03DAC5</color>
-    <color name="teal_700">#FF018786</color>
-    <color name="black">#FF000000</color>
-    <color name="white">#FFFFFFFF</color>
+    <color name="teal_200" tools:ignore="UnusedResources">#FF03DAC5</color>
+    <color name="teal_700" tools:ignore="UnusedResources">#FF018786</color>
+    <color name="black" tools:ignore="UnusedResources">#FF000000</color>
+    <color name="white" tools:ignore="UnusedResources">#FFFFFFFF</color>
 </resources>
